@@ -1,3 +1,7 @@
 ﻿# Deployment project setup
 
 https://github.com/roman-yagodin/R7.Dnn.Templates/wiki/Deployment-Project-Setup
+
+# SkinObject Usage
+
+https://github.com/roman-yagodin/R7.Dnn.Templates/wiki/SkinObject-Usage
